// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticLookupFormatEditorComponent should render multiple lookup entries and unknown key value 1`] = `
<React.Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "key",
          "name": "Key",
          "render": [Function],
        },
        Object {
          "field": "value",
          "name": "Value",
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete entry",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "width": "30px",
        },
      ]
    }
    items={
      Array [
        Object {
          "index": 0,
        },
        Object {
          "index": 1,
        },
        Object {
          "index": 2,
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    color="primary"
    fill={false}
    iconSide="left"
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
    type="button"
  >
    <FormattedMessage
      defaultMessage="Add entry"
      id="common.ui.fieldEditor.staticLookup.addEntryButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Value for unknown key"
        id="common.ui.fieldEditor.staticLookup.unknownKeyLabel"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      placeholder="Leave blank to keep value as-is"
      value="test value"
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
</React.Fragment>
`;

exports[`StaticLookupFormatEditorComponent should render normally 1`] = `
<React.Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "key",
          "name": "Key",
          "render": [Function],
        },
        Object {
          "field": "value",
          "name": "Value",
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete entry",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "width": "30px",
        },
      ]
    }
    items={
      Array [
        Object {
          "index": 0,
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
    style={
      Object {
        "maxWidth": "400px",
      }
    }
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    color="primary"
    fill={false}
    iconSide="left"
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
    type="button"
  >
    <FormattedMessage
      defaultMessage="Add entry"
      id="common.ui.fieldEditor.staticLookup.addEntryButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Value for unknown key"
        id="common.ui.fieldEditor.staticLookup.unknownKeyLabel"
        values={Object {}}
      />
    }
  >
    <EuiFieldText
      compressed={false}
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      placeholder="Leave blank to keep value as-is"
      value=""
    />
  </EuiFormRow>
  <EuiSpacer
    size="m"
  />
</React.Fragment>
`;
